[gd_scene load_steps=5 format=3 uid="uid://osdc7yc411wc"]

[ext_resource type="Script" path="res://Player.gd" id="1_aiy77"]
[ext_resource type="Script" path="res://Camera3D.gd" id="2_d0427"]
[ext_resource type="ArrayMesh" uid="uid://gjuyfsvj5gs0" path="res://Models/characterVampire.obj" id="2_x6sle"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t4jkl"]
radius = 0.2
height = 0.8

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_aiy77")
metadata/_edit_group_ = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1, 3)
current = true
fov = 60.0
script = ExtResource("2_d0427")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1, 3)
distance_fade_enabled = true
distance_fade_begin = 20.0

[node name="CharacterVampire" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_x6sle")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("CapsuleShape3D_t4jkl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreText" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
text = "Score: 0"

[node name="DebugInfo" type="Label" parent="CanvasLayer"]
offset_top = 25.0
offset_right = 101.0
offset_bottom = 51.0
text = "DEBUG_INFO"
